remove . in BSc and MSc

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @mastersthesis{key,
   author  = {Jonas Kaufmann},
-  school  = {B.Sc. Thesis, Software Engineering Chair, Saarland University},
+  school  = {BSc Thesis, Software Engineering Chair, Saarland University},
   title   = {An Evaluation of Different Measurement Approaches for Features Performance Analysis},
   year    = {2022},
   pdf={bsc_thesis.pdf},
