fix spelling mistake in BSc thesis title

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,9 +4,9 @@
 @mastersthesis{key,
   author  = {Jonas Kaufmann},
   school  = {BSc Thesis, Software Engineering Chair, Saarland University},
-  title   = {An Evaluation of Different Measurement Approaches for Features Performance Analysis},
+  title   = {An Evaluation of Different Measurement Approaches for Feature Performance Analysis},
   year    = {2022},
-  pdf={bsc_thesis.pdf},
+  pdf     = {bsc_thesis.pdf},
 }
 
 @article{key,
@@ -14,5 +14,5 @@
   journal         = {{Student Research Competition Poster, ACM Symposium on Operating Systems Principles}},
   title           = {AC⚡DSim: Full System Energy Estimation with Modular Simulation},
   year            = {2023},
-  pdf={sosp_src_acdsim_poster.pdf},
+  pdf             = {sosp_src_acdsim_poster.pdf},
 }
