add third place for SOSP SRC submission

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
 
 @article{key,
   author          = {Jonas Kaufmann},
-  journal         = {{Student Research Competition Poster, ACM Symposium on Operating Systems Principles}},
+  journal         = {{Student Research Competition, 3rd Place, ACM Symposium on Operating Systems Principles}},
   title           = {AC⚡DSim: Full System Energy Estimation with Modular Simulation},
   year            = {2023},
   pdf             = {sosp_src_acdsim_poster.pdf},
