upload Master's thesis

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,17 +2,25 @@
 ---
 
 @mastersthesis{key,
-  author  = {Jonas Kaufmann},
-  school  = {BSc Thesis, Software Engineering Chair, Saarland University},
-  title   = {An Evaluation of Different Measurement Approaches for Feature Performance Analysis},
-  year    = {2022},
-  pdf     = {bsc_thesis.pdf},
+  author = {Jonas Kaufmann},
+  school = {MSc Thesis, Operating Systems Group, Max Planck Institute for Software Systems},
+  title  = {AC/DSim: Full System Energy Estimation with Modular Simulation},
+  year   = {2024},
+  pdf    = {thesis_msc_Kaufmann_Jonas.pdf}
 }
 
 @article{key,
-  author          = {Jonas Kaufmann},
-  journal         = {{Student Research Competition, 3rd Place, ACM Symposium on Operating Systems Principles}},
-  title           = {AC⚡DSim: Full System Energy Estimation with Modular Simulation},
-  year            = {2023},
-  pdf             = {sosp_src_acdsim_poster.pdf},
+  author  = {Jonas Kaufmann},
+  journal = {{Student Research Competition, 3rd Place, ACM Symposium on Operating Systems Principles}},
+  title   = {AC/DSim: Full System Energy Estimation with Modular Simulation},
+  year    = {2023},
+  poster  = {sosp_src_acdsim_poster.pdf}
+}
+
+@mastersthesis{key,
+  author = {Jonas Kaufmann},
+  school = {BSc Thesis, Software Engineering Chair, Saarland University},
+  title  = {An Evaluation of Different Measurement Approaches for Feature Performance Analysis},
+  year   = {2022},
+  pdf    = {bsc_thesis.pdf}
 }
